fix: stable facet order in the response
Map.of has no defined iteration order, so wrapping it in a LinkedHashMap
did nothing and the facets came back differently per run.